# minecrust

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/registries/: block.lua
assets/shaders/: voxel_texture.wgsl
benches/: bench_atom.rs  bench_script.rs
src/: atom.rs  lib.rs  loading.rs  main.rs  state.rs
src/core/: mod.rs  registry.rs  simple_control.rs
src/core/registry/: block.rs
src/perf_ui/: mod.rs  voxel.rs
src/script/: lua_script_loader.rs  mod.rs
src/voxel/: chunk.rs  chunk_ref.rs  chunk_task.rs  config.rs  generator.rs  material.rs  mesh.rs  mod.rs  modifier.rs  palette.rs  storage.rs  textures.rs  textures_loader.rs  utils.rs  voxel_block.rs  world.rs
src/voxel/chunk/: data.rs
src/voxel/generator/: flat.rs  noise.rs
tests/: script.rs
